Fixed graphic text alignment

--- a/client/src/stylesheets/spectrumbar.css
+++ b/client/src/stylesheets/spectrumbar.css
@@ -27,6 +27,7 @@
 .spectrum-middle {
     justify-content: center;
     flex: 33%;
+    margin-left: 120px;
 }
 
 .spectrum-right{
